--- a/src/main/resources/templates/resultPage.html
+++ b/src/main/resources/templates/resultPage.html
@@ -1,10 +1,22 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head lang="en">
+<head lang="zh-cmn-Hans">
     <meta charset="UTF-8"/>
-    <title>Hello thymeleaf</title>
+    <title>Hello twitter</title>
+    <link  rel="stylesheet" href="/webjars/materializecss/1.0.0-rc.1/css/materialize.min.css" type="text/css" media="screen,projection"/>
 </head>
 <body>
-    <span th:each="msg : ${messages}" th:text="${msg}"> default msg</span>
+<div class="row">
+    <h2 class="indigo-text center" th:text="|Tweet results for ${search}|">Tweets</h2>
+    <ul class="collection">
+        <li class="collection-item avatar" th:each="tweet : ${tweets}">
+            <img th:src="${tweet.user.profileImageUrl}" alt="" class="circle"/>
+            <span class="title" th:text="${tweet.user.name}">Username</span>
+            <p th:text="${tweet.text}">Tweet message</p>
+        </li>
+    </ul>
+</div>
+<script src="/webjars/jquery/1.10.2/jquery.js"></script>
+<script src="/webjars/materializecss/1.0.0-rc.1/js/materialize.js"></script>
 </body>
 </html>
