--- a/src/main/resources/templates/resultPage.html
+++ b/src/main/resources/templates/resultPage.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
-<head lang="zh-cmn-Hans">
-    <meta charset="UTF-8"/>
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns:layout="http://localhost/thymeleaf/layout"
+      layout:decorator="layout/default">
+<head>
     <title>Hello twitter</title>
-    <link  rel="stylesheet" href="/webjars/materializecss/1.0.0-rc.1/css/materialize.min.css" type="text/css" media="screen,projection"/>
 </head>
-<body>
-<div class="row">
+<body lang="zh-cmn-Hans">
+<div class="row" layout:fragment="content">
     <h2 class="indigo-text center" th:text="|Tweet results for ${search}|">Tweets</h2>
     <ul class="collection">
         <li class="collection-item avatar" th:each="tweet : ${tweets}">
@@ -16,7 +16,5 @@
         </li>
     </ul>
 </div>
-<script src="/webjars/jquery/1.10.2/jquery.js"></script>
-<script src="/webjars/materializecss/1.0.0-rc.1/js/materialize.js"></script>
 </body>
 </html>
