--- a/src/main/resources/templates/resultPage.html
+++ b/src/main/resources/templates/resultPage.html
@@ -5,7 +5,7 @@
 <head>
     <title>Hello twitter</title>
 </head>
-<body lang="zh-cmn-Hans">
+<body >
 <div class="row" layout:fragment="content">
     <h2 class="indigo-text center" th:text="|Tweet results for ${search}|">Tweets</h2>
     <ul class="collection">
