--- a/src/main/resources/templates/searchPage.html
+++ b/src/main/resources/templates/searchPage.html
@@ -8,15 +8,20 @@
 <body>
 <div class="row" layout:fragment="content">
     <h4 class="indigo-text center">Please enter a search term</h4>
-    <form action="/result" method="get" class="col s12">
-        <div class="row center"></div>
-            <div class="input-field col s6 offset-s3">
-                <i class="mdi-action-search prefix"></i>
-                <input type="text" id="search" name="search" class="validate" />
-                <label for="search">Search</label>
+    <div class="col s6 offset-s3">
+        <div id="errorMessage card-panel" class="red lighten-2" th:if="${error}">
+            <span class="card-title" th:text="${error}"></span>
+        </div>
+        <form action="/postSearch" method="post" class="col s12">
+            <div class="row center">
+                <div class="input-field">
+                    <i class="mdi-action-search prefix"></i>
+                    <input type="text" id="search" name="search" class="validate"/>
+                    <label for="search">Search</label>
+                </div>
             </div>
-    </form>
+        </form>
+    </div>
 </div>
-
 </body>
 </html>
