add profile validation and add index

--- a/src/main/resources/templates/layout/default.html
+++ b/src/main/resources/templates/layout/default.html
@@ -4,14 +4,29 @@
         <meta http-equiv="Content-Type" content="text/html" charset="UTF-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no"/>
         <title>Title</title>
-        <link rel="stylesheet" href="/webjars/materializecss/1.0.0-rc.1/css/materialize.min.css" type="text/css"
+        <link rel="stylesheet" href="/webjars/materializecss/1.0.0-rc.1/css/materialize.css" type="text/css"
               media="screen,projection"/>
     </head>
     <body lang="zh-cmn-Hans">
+        <ul id="index-dropdown" class="dropdown-content">
+            <li><a th:href="@{/postSearch}">SearchPage</a></li>
+            <li><a th:href="@{/profile}">ProfilePage</a></li>
+        </ul>
+        <nav>
+            <div class="nav-wrapper indigo">
+                <ul class="right">
+                    <li>
+                        <a href="#!" class="dropdown-button" dataactivates="index-dropdown"><i class="right"></i></a></li>
+                </ul>
+            </div>
+        </nav>
         <section layout:fragment="content">
             <p>Page content goes here</p>
         </section>
-        <script src="/webjars/jquery/1.10.2/jquery.js"></script>
+        <script src="/webjars/jquery/2.1.4/jquery.js"></script>
         <script src="/webjars/materializecss/1.0.0-rc.1/js/materialize.js"></script>
+        <script type="text/javascript">
+            // ${".dropdown-button"}.dropdown();
+        </script>
     </body>
 </html>
