--- a/src/main/resources/templates/profile/profilePage.html
+++ b/src/main/resources/templates/profile/profilePage.html
@@ -8,21 +8,27 @@
 <body>
 <div class="row" layout:fragment="content">
     <h2 class="indigo-text center">Personal info</h2>
-    <form th:action="@{/profile}" th:object="${profileForm}" method="post" class="col m8 s12 offset-m2">
+    <form th:action="@{/profile}" th:object="${profileFormDTO}" method="post" class="col m8 s12 offset-m2">
+        <!--<ul th:if="${#fields.hasErrors('*')}" class="errorlist">
+            <li th:each="err : ${#fields.errors('*')}" th:text="${err}">Input is incorrect</li>
+        </ul>-->
         <div class="row">
             <div class="input-field col s6">
-                <input th:field="${profileForm.twitterHandle}" id="twitterHandle" type="text"/>
-                <label for="twitterHandle">Last Name</label>
+                <input th:field="${profileFormDTO.twitterHandle}" id="twitterHandle" type="text" th:errorclass="invalid"/>
+                <label for="twitterHandle">Twitter handle</label>
+                <div th:errors="*{twitterHandle}" class="red-text">Error</div>
             </div>
             <div class="input-field col s6">
-                <input th:field="${profileForm.email}" id="email" type="text"/>
+                <input th:field="${profileFormDTO.email}" id="email" type="text" th:errorclass="invalid"/>
                 <label for="email">Email</label>
+                <div th:errors="*{email}" class="red-text">Error</div>
             </div>
         </div>
         <div class="row">
             <div class="input-field col s6">
-                <input th:field="${profileForm.birthDate}" id="brithDate" type="text" th:placeholder="${dateFormat}"/>
+                <input th:field="${profileFormDTO.birthDate}" id="brithDate" type="text" th:errorclass="invalid" th:placeholder="${dateFormat}"/>
                 <label for="brithDate">Birth Date</label>
+                <div th:errors="*{birthDate}" class="red-text">Error</div>
             </div>
         </div>
         <div class="row s12">
