--- a/src/main/resources/templates/resultPage.html
+++ b/src/main/resources/templates/resultPage.html
@@ -7,7 +7,8 @@
 </head>
 <body>
 <div class="row" layout:fragment="content">
-    <h2 class="indigo-text center" th:text="|Tweet results for ${search}|">Tweets</h2>
+    <h2 class="indigo-text center" th:text="|搜索结果 by ${search}|">搜索结果</h2>
+    <div class="indigo-text center" >列表随机自增</div>
     <ul class="collection">
         <li class="collection-item avatar" th:each="tweet : ${tweets}">
             <img th:src="${tweet.user.profileImageUrl}" alt="" class="circle"/>
