--- a/src/main/resources/templates/searchPage.html
+++ b/src/main/resources/templates/searchPage.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <div class="row" layout:fragment="content">
-    <h4 class="indigo-text center">Please enter a search term</h4>
+    <h4 class="indigo-text center">请输入搜索字词</h4>
     <div class="col s6 offset-s3">
         <div id="errorMessage card-panel" class="red lighten-2" th:if="${error}">
             <span class="card-title" th:text="${error}"></span>
@@ -17,7 +17,7 @@
                 <div class="input-field">
                     <i class="mdi-action-search prefix"></i>
                     <input type="text" id="search" name="search" class="validate"/>
-                    <label for="search">Search</label>
+                    <label for="search">Search 不允许搜索含有struts的关键字</label>
                 </div>
             </div>
         </form>
