--- a/src/main/resources/templates/layout/default.html
+++ b/src/main/resources/templates/layout/default.html
@@ -4,19 +4,19 @@
         <meta http-equiv="Content-Type" content="text/html" charset="UTF-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no"/>
         <title>Title</title>
-        <link rel="stylesheet" href="/webjars/materializecss/1.0.0-rc.1/css/materialize.css" type="text/css"
+        <link rel="stylesheet" href="/webjars/materializecss/0.96.0/css/materialize.css" type="text/css"
               media="screen,projection"/>
     </head>
     <body lang="zh-cmn-Hans">
         <ul id="index-dropdown" class="dropdown-content">
-            <li><a th:href="@{/postSearch}" >SearchPage</a></li>
+            <li><a th:href="@{/searchPage}"  >SearchPage</a></li>
             <li><a th:href="@{/profile}" >ProfilePage</a></li>
         </ul>
         <nav>
             <div class="nav-wrapper indigo">
                 <ul class="right">
                     <li>
-                        <a href="#!" class="dropdown-button" dataactivates="index-dropdown"><i class="mdi-action-language right"></i>Index</a></li>
+                        <a href="#" class="dropdown-button" data-activates="index-dropdown"><i class="mdi-navigation-arrow-drop-down right"></i>Index</a></li>
                 </ul>
             </div>
         </nav>
@@ -24,7 +24,7 @@
             <p>Page content goes here</p>
         </section>
         <script src="/webjars/jquery/2.1.4/jquery.js"></script>
-        <script src="/webjars/materializecss/1.0.0-rc.1/js/materialize.js"></script>
+        <script src="/webjars/materializecss/0.96.0/js/materialize.js"></script>
         <script type="text/javascript" >
             $(".dropdown-button").dropdown();
         </script>
