--- a/src/main/resources/templates/layout/default.html
+++ b/src/main/resources/templates/layout/default.html
@@ -7,16 +7,23 @@
         <link rel="stylesheet" href="/webjars/materializecss/0.96.0/css/materialize.css" type="text/css"
               media="screen,projection"/>
     </head>
-    <body lang="zh-cmn-Hans">
+    <body >
         <ul id="index-dropdown" class="dropdown-content">
-            <li><a th:href="@{/searchPage}"  >SearchPage</a></li>
-            <li><a th:href="@{/profile}" >ProfilePage</a></li>
+            <li><a href="/">index</a></li>
+            <li><a href="/searchPage">SearchPage</a></li>
+            <li><a href="/profile">ProfilePage</a></li>
+        </ul>
+        <ul id="lang-dropdown" class="dropdown-content">
+            <li><a href="?lang=en_US">English</a></li>
+            <li><a href="?lang=zh">中文</a></li>
         </ul>
         <nav>
             <div class="nav-wrapper indigo">
                 <ul class="right">
-                    <li>
-                        <a href="#" class="dropdown-button" data-activates="index-dropdown"><i class="mdi-navigation-arrow-drop-down right"></i>Index</a></li>
+                    <li><a href="#!" class="dropdown-button"  data-activates="lang-dropdown"><i class="mdi-action-language right"></i>Lang</a></li>
+                </ul>
+                <ul class="right">
+                    <li><a href="#" class="dropdown-button" data-activates="index-dropdown"><i class="mdi-navigation-arrow-drop-down right"></i>Index</a></li>
                 </ul>
             </div>
         </nav>
@@ -27,6 +34,8 @@
         <script src="/webjars/materializecss/0.96.0/js/materialize.js"></script>
         <script type="text/javascript" >
             $(".dropdown-button").dropdown();
+        </script>
+        <script type="text/javascript" layout:fragment="script">
         </script>
     </body>
 </html>
