--- a/src/main/resources/templates/layout/default.html
+++ b/src/main/resources/templates/layout/default.html
@@ -3,7 +3,7 @@
     <head>
         <meta http-equiv="Content-Type" content="text/html" charset="UTF-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no"/>
-        <title>Title</title>
+        <title>spring boot mvc demo</title>
         <link rel="stylesheet" href="/webjars/materializecss/0.96.0/css/materialize.css" type="text/css"
               media="screen,projection"/>
     </head>
@@ -12,6 +12,7 @@
             <li><a href="/">index</a></li>
             <li><a href="/searchPage">SearchPage</a></li>
             <li><a href="/profile">ProfilePage</a></li>
+            <li><a href="/upload">uploadPage</a></li>
         </ul>
         <ul id="lang-dropdown" class="dropdown-content">
             <li><a href="?lang=en_US">English</a></li>
