4.文件上传与错误处理 完成

--- a/src/main/resources/templates/layout/default.html
+++ b/src/main/resources/templates/layout/default.html
@@ -9,10 +9,9 @@
     </head>
     <body >
         <ul id="index-dropdown" class="dropdown-content">
-            <li><a href="/">index</a></li>
+            <li><a href="/index">index</a></li>
             <li><a href="/searchPage">SearchPage</a></li>
             <li><a href="/profile">ProfilePage</a></li>
-            <li><a href="/upload">uploadPage</a></li>
         </ul>
         <ul id="lang-dropdown" class="dropdown-content">
             <li><a href="?lang=en_US">English</a></li>
